[package]
name = "ecdsa-agent"
description = "multi-party ECDSA Agent Server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/link-mozy/ecdsa-agent.git"
readme = "README.md"

[[bin]]
name = "ecdsa-agent"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33.4"
fil_logger = "0.1.7"
log = "0.4.20"
prost = "0.12.3"
strum = "0.25.0"
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"
anyhow = "1.0.75"
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv = { package = "curv-kzen", version = "0.7", default-features = false }
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.10"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.3.12"}
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
signal-hook = "0.3.17"
dirs = "5.0.1"

[dependencies.multi-party-ecdsa]
git = "https://github.com/Hrezaei/multi-party-ecdsa"
#tag = "v0.3.0"
branch = "feature/deprecate-rust-crypto"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[build-dependencies]
tonic-build = "0.10.2"
